# TheGameOfLife

./: .gitignore  CMakeLists.txt  README.md  main.c  run.sh
.github/workflows/: cmake-multi-platform.yml
PhotoEdit/: Game.xcf  Gosper glider gun.csv  InfoC Bird v0.csv  InfoC Bird v2.csv  InfoC Bird.csv  feladat.txt  hozzajarul.txt
documentation/: programmers_documentation.docx  specification.docx  user_documentation.docx
src/: CMakeLists.txt
src/game/: CMakeLists.txt  CharLogicHandler.c  CharLogicHandler.h  FileHandler.c  FileHandler.h  FileHandlerStruct.h  GameLogic.c  GameLogic.h  IntLogicHandler.c  IntLogicHandler.h  MathHandler.c  MathHandler.h  Random.c  Random.h
src/terminal/: CMakeLists.txt  GameSession.c  GameSession.h  PrintHandler.c  PrintHandler.h  PromptHandler.c  PromptHandler.h  StyleHandler.c  StyleHandler.h  WindowSize.c  WindowSize.h
src/util/: CMakeLists.txt  IntLogicHandler.c  IntLogicHandler.h  Stringify.h  Utils.c  Utils.h
